# tapeworm-bot

./: .gcloudignore  .gitignore  .travis.yml  BUILD.bazel  README.md  WORKSPACE  app.yaml  appengine_config.py  config-example.ini  config-example.py  dev.py  go.mod  go.sum  instance.tar.enc  main.py  main_test.py  message_handler.py  models.py  noxfile.py  pylintrc  pytest.ini  requirements.txt  services.py  test_message_handler.py  utils.py
app/: package-lock.json  package.json
app/src/: App.css  App.js  Link.js  Links.css  Links.js  client.js  index.js
bot/: BUILD.bazel  bot_test.go  go.mod  main.go  messagehandler.go
docs/: local-database.md  new-commands.md
goexample/: BUILD.bazel  main.go
requirements/: dev.txt  requirements-dev.txt  test.txt
tapeworm/: __init__.py  api.py  incoming.py  message_handler.py  model_link.py  providers.py  services.py  tapeworm.py
tapeworm/ext/: telegram.py
tapeworm/templates/: links.html
tests/: assertions.py  conftest.py  context.py  fakes.py  test_add_links.py  test_commands.py  test_extract_title.py  test_incoming.py  test_links_callback_query.py  test_links_query.py  test_main.py  test_message_handler.py
