load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "messagehandler.go",
    ],
    importpath = "github.com/bananers/tapeworm-bot/bot",
    visibility = ["//visibility:private"],
    deps = ["@com_github_go_telegram_bot_api_telegram_bot_api//:go_default_library"],
)

go_image(
    name = "bot_image",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "bot",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["bot_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_go_telegram_bot_api_telegram_bot_api//:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
